- New .dev folder with sync scripts added to sync from dotfiles-version/* to ~/dotfiles (Please check before executing)

Hyprland:
- New settings cli app to change variations on the fly. SUPER+CTRL+S or wheel icon in waybar.
- New variations for decoration and window
- Variations for monitor settings introduced
- More keybindings for function keys added

Known issues Qtile Wayland:
- GTK dark theme is not always working
- Screen recording issues with OBS Studio and other applications

Version 2.5.1
https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.5.1
--------------------------------------------------------
Installation:
- Changed from cp to rsync to sync files between folders
- Stability improvements
- New default wallpapers

Version 2.5
https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.5
--------------------------------------------------------
Installation:
- Completely reworked script
- Can install Hyprland and/or Qtile
- Backup of existing dotfiles possible
- New optimized download of wallpapers from the repository

General:
- Script folder cleaned up and window manager scripts moved to related wm scripts folder

Hyprland:
- Show key bindings defined in ~/dotfiles/hypr/conf/keybindings.conf rofi menu. Opens with SUPER+CTRL+H or right click on Apps
- Added keybinding to toggle all windows to float and back to tiling (Doesn't work with web apps)
- Add brightness control for FN Brightness keys
- swww loading wallpaper from last session
- New Waybar Theme with blurred background
- Latest Waybar supports now persistent workspaces (set to 5 by default)

Qtile:
- Add wayland support
- New Qtile status bar theme (Qtile status bar is default theme)
- Status bar can be switch on X11 with SUPER + SHIFT + S between Qtile bar and Polybar
- swww/wal loading wallpaper from last session
- Add brightness control for FN Brightness keys

Known issues Qtile Wayland:
- GTK dark theme is not always working
- Screen recording issues with OBS Studio and other applications
