@@ -1,0 +1,2 @@
+#!/bin/bash
+theme_name="ML4W Black"
